# nftable-router

./: LICENSE  README.md  nft_route.json  pyproject.toml  setup.cfg
nftable_router/: dns.py  fullcone_nat.py  icmp_builder.py  nft_utils.py  router.py  test-ping.py
