[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nftable-router"
authors = [
    {name = "MagicBear", email = "magicbearmo@gmail.com"},
]
description = "Software Policy Router for nftables"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["nftable"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipip-ipdb-hp",
    "scapy",
    "NetfilterQueue",
    "emoji-country-flag",
    "python-iptables",
    "pyroute2",
    "netifaces",
    "pytput",
    "python-prctl",
    "psutil",
    "redis"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/magicbear/nftable-router"
Issues = "https://github.com/magicbear/nftable-router/issues"

[project.scripts]
nft-router = "nftable_router.router:main"
