[metadata]
name = nftable-router
version = 0.1.0
author = MagicBear
author_email = magicbearmo@gmail.com
description = Software Policy Router for nftables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/magicbear/nftable-router
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
